# traefik-tailscale-provider

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix
nix/: config.nix  dev-shell.nix  rust.nix
src/: main.rs
src/config/: mod.rs
src/platform/: mod.rs
src/tailscale/: client.rs  mod.rs  types.rs
src/traefik/: config.rs  mod.rs  provider.rs
