[package]
name = "traefik-tailscale-provider"
version = "0.1.0"
edition = "2024"

[dependencies]

# Size optimization profile
[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Reduce number of codegen units to increase optimizations
panic = "abort"       # Abort on panic (doesn't produce a backtrace)
strip = true          # Automatically strip symbols from the binary
