[package]
name = "traefik-tailscale-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
axum = "0.8"
tracing-subscriber = "0.3"

# Size optimization profile
[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Reduce number of codegen units to increase optimizations
panic = "abort"       # Abort on panic (doesn't produce a backtrace)
strip = true          # Automatically strip symbols from the binary
