[package]
name = "traefik-tailscale-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hyper = "1.6"
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"
base64 = "0.22"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
dotenvy = "0.15"

[target.'cfg(unix)'.dependencies]
hyperlocal = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
hyper-named-pipe = "0.1"

# Size optimization profile
[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Reduce number of codegen units to increase optimizations
panic = "abort"       # Abort on panic (doesn't produce a backtrace)
strip = true          # Automatically strip symbols from the binary
